2009-06-04  Siavash Safi  <siavash@siavashs.org>

	* clutter/src/clutter_docs.xml:
	* clutter/src/clutter_enums.defs:
	* clutter/src/clutter_methods.defs:
	* clutter/src/clutter_signals.defs: Regenerate all defs.
	* clutter/src/texture.hg: Wrap new methods and properties.

0.9.3:

2009-05-15  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/actor.[hg|ccg]: animate_with_timeline(), animate_with_alpha(): 
	Rename to animate().
	* tests/Makefile.am: Fix a typo to fix distcheck.

2009-05-15  Siavash Safi  <siavash@siavashs.org>

	* .gitignore:
	* clutter/src/animation.hg: Do not use _DERIVES_INITIALLY_UNOWNED because of
	the changes in the C API, Wrap started() signal
	* clutter/src/cairo-texture.hg: Add clear() method
	* clutter/src/clutter_docs.xml:
	* clutter/src/clutter_methods.defs:
	* clutter/src/clutter_signals.defs: Regenerate all defs
	* clutter/src/text.ccg:
	* clutter/src/text.hg: Wrap new methods and properties
	* configure.in: Increase version and required clutter version to 0.9.3

2009-04-27  Siavash Safi  <siavash@siavashs.org>

	* clutter/src/actor.hg: Reverted overloaded methods for now since
	it's ambiguous for the compiler.

2009-04-11  Siavash Safi  <siavash@siavashs.org>

	* trunk/clutter/src/cairo-texture.ccg:
	* trunk/clutter/src/cairo-texture.hg: Added the Cairo API
	* trunk/tools/m4/convert_cairomm.m4:
	* clutter/cluttermm.h:
	* clutter/cluttermm/main.cc:
	* clutter/cluttermm/main.h: Added get_font_map()
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/alpha.ccg: Remove Deprecated API which is replaced by
	the Animation API
	* clutter/src/color.hg: Ignored clutter_color_from_string() which
	is already hand coded
	* clutter/src/media.hg: Added set/get_progress() methods and progress
	property
	* clutter/src/path.hg: Hand coded PathNodeType enum, added Cairo API and
	clear(), get_position() methods
	* clutter/src/script.ccg:
	* clutter/src/script.hg: Added add_search_paths() and lookup_filename()
	methods