@@ -1,0 +1,59 @@
+/* Copyright (C) 2009 The cluttermm Development Team
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free
+ * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+#include <glibmm/object.h>
+#include <cairomm/fontoptions.h>
+
+_DEFS(cluttermm,clutter)
+_PINCLUDE(glibmm/private/object_p.h)
+
+namespace Clutter
+{
+
+class Backend :
+  public Glib::Object
+{
+  _CLASS_GOBJECT(Backend, ClutterBackend, CLUTTER_BACKEND, Glib::Object, GObject)
+
+protected:
+  _CTOR_DEFAULT()
+
+public:
+  _WRAP_METHOD(static Glib::RefPtr<Backend> get_default(), clutter_get_default_backend, refreturn)
+
+  _WRAP_METHOD(double get_resolution() const, clutter_backend_get_resolution)
+  _WRAP_METHOD(void set_resolution(double dpi), clutter_backend_set_resolution)
+
+  _WRAP_METHOD(guint get_double_click_time() const, clutter_backend_get_double_click_time)
+  _WRAP_METHOD(void set_double_click_time(guint msec), clutter_backend_set_double_click_time)
+
+  _WRAP_METHOD(guint get_double_click_distance() const, clutter_backend_get_double_click_distance)
+  _WRAP_METHOD(void set_double_click_distance(guint distance), clutter_backend_set_double_click_distance)
+
+  _WRAP_METHOD(::Cairo::FontOptions get_font_options() const, clutter_backend_get_font_options)
+  _WRAP_METHOD(void set_font_options(const ::Cairo::FontOptions& options), clutter_backend_set_font_options)
+
+  _WRAP_METHOD(Glib::ustring get_font_name() const, clutter_backend_get_font_name)
+  _WRAP_METHOD(void set_font_name(const Glib::ustring& font_name), clutter_backend_set_font_name)
+
+  _WRAP_SIGNAL(void font_changed(), "font-changed")
+  _WRAP_SIGNAL(void resolution_changed(), "resolution-changed")
+};
+
+} // namespace Clutter
+
+//vim: ts=2,sw=2
