@@ -2,4 +2,5 @@ _CONVERSION(`const Glib::RefPtr<Cairo::Path>&',`const cairo_path_t*',`($3)->cobj
 _CONVERSION(`Glib::RefPtr<Cairo::Context>&',`cairo_t*',`($3)->cobj()')
 _CONVERSION(`Glib::RefPtr< ::Cairo::Context >&',`cairo_t*',`($3)->cobj()')
 _CONVERSION(`cairo_t*',`Glib::RefPtr< ::Cairo::Context >',`$2(new ::Cairo::Context ($3, true))')
-
+_CONVERSION(`const cairo_font_options_t*',`::Cairo::FontOptions',`$2(const_cast<cairo_font_options_t*>($3), true)')
+_CONVERSION(`const ::Cairo::FontOptions&',`const cairo_font_options_t*',`($3).cobj()')
